force-app/main/default/objects/Authorized_User__c/Authorized_User__c.object-meta.xml
<CustomObject>
    <label>Authorized User</label>
    <nameField>
        <label>Authorized User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorized Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>