force-app/main/default/objects/Authorized_User__c/fields/Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>Authorized_User__c</fullName>
    <label>Authorized User</label>
    <length>32</length>
    <type>Text</type>
</CustomField>