force-app/main/default/objects/Authorized_User__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D</label>
    <type>Checkbox</type>
</CustomField>