force-app/main/default/objects/Authorized_User__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>32</length>
    <type>Text</type>
</CustomField>